# MAA-WEB-CONTROL

./: .gitattributes  .gitignore  LICENSE.spdx  README.md  pyproject.toml  run.bat  run.sh
app/: __init__.py  api.py  capabilities.py  copilot_resolver.py  default_profiles.py  events.py  image_codec.py  logs.py  maa_adapter.py  maa_versions.py  main.py  mapper.py  models.py  notifications.py  options.py  resource_paths.py  runner.py  scheduler.py  storage.py  update_checking.py  update_helpers.py  update_service.py  version.py
data/: adapter.json  scheduler.json
data/profiles/: daily-shoucai.json  daily-shualizhi.json  daily.json
docs/: deployment-redroid-ubuntu.md  maa-log-alignment-plan.md  maa-original-feature-gap.md  maa-ui-alignment-design.md  maa-wpfgui-to-maacore-callchain.md
tests/: test_api_adb.py  test_api_copilot.py  test_api_logs.py  test_api_profiles.py  test_capabilities.py  test_copilot_resolver.py  test_default_profiles.py  test_events_socket.py  test_frontend_task_list.py  test_logs.py  test_maa_adapter.py  test_mapper.py  test_notifications.py  test_options.py  test_runner.py  test_scheduler.py  test_storage.py  test_versions_update.py
web/: app.js  copilotView.js  featureRegistry.js  index.html  logView.js  maaCards.js  settingsView.js  styles.css  taskForms.js  toolsView.js
web/core/: api.js  boot.js  state.js  storage.js
web/shared/: logEvents.js
web/styles/: base.css  basement.css  copilot.css  forms.css  layout.css  logs.css  settings.css  tools.css
web/tasks/: award.js  custom.js  fight.js  index.js  infrast.js  mall.js  recruit.js  (+4 more)
(+29 files in other folders)
