[project]
name = "maa-web-control"
version = "0.1.0"
description = "LAN web console for orchestrating MaaAssistantArknights tasks."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

